// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manual-meta-alarm-form Renders \`manual-meta-alarm-form\` with alarms 1`] = `
<div
  class="layout column"
>
  <div
    class="v-input v-text-field v-select v-autocomplete theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Manual meta alarm
          </label>
          <input
            aria-label="Manual meta alarm"
            autocomplete="off"
            name="manualMetaAlarm"
            role="combobox"
            type="text"
          />
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input v-text-field theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Note
          </label>
          <input
            aria-label="Note"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`manual-meta-alarm-form Renders \`manual-meta-alarm-form\` with alarms 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              alarm-display-name
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`manual-meta-alarm-form Renders \`manual-meta-alarm-form\` with default props 1`] = `
<div
  class="layout column"
>
  <div
    class="v-input v-text-field v-select v-autocomplete v-input--is-label-active v-input--is-dirty theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Manual meta alarm
          </label>
          <input
            aria-label="Manual meta alarm"
            autocomplete="off"
            name="manualMetaAlarm"
            role="combobox"
            type="text"
          />
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input v-text-field v-input--is-label-active v-input--is-dirty theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            aria-hidden="true"
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Note
          </label>
          <input
            aria-label="Note"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`manual-meta-alarm-form Renders \`manual-meta-alarm-form\` with default props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <div
          class="v-list__tile theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              No meta alarm corresponding. Press 
              <kbd>
                enter
              </kbd>
               to create a new one
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
